<resources>
    <string name="app_name">ReMeDrink</string>

    <string name="title_home">Home</string>
    <string name="title_tracker">Water Tracker</string>
    <string name="title_profile">Profile</string>
    <string name="splash_quote">“Drink your way for better health.”</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">&#160;or&#160;</string>

    <string name="fullname">Full Name</string>
    <string name="prompt_fullname">Enter your full name</string>
    <string name="invalid_fullname">Full name must be >3 alphabet characters</string>

    <string name="username">Username</string>
    <string name="prompt_username">Enter a username</string>
    <string name="invalid_username">Username must not be empty</string>

    <string name="email">Email</string>
    <string name="prompt_email">Enter your email address</string>
    <string name="invalid_email">Email format not valid</string>

    <string name="password">Password</string>
    <string name="prompt_password">Enter your password</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_confirm_password">Enter your password again</string>
    <string name="invalid_confirm_password">Password and Confirm Password must be match</string>

    <string name="login_welcome">Welcome to ReMeDrink!</string>
    <string name="register_welcome">Create Account</string>

    <string name="prompt_login_account">Please login with your new account</string>
    <string name="login_failed">"Login Failed"</string>
    <string name="register_failed">Register Failed</string>
    <string name="username_already_exists">Username already exists. Please try another username.</string>
    <string name="email_already_exists">The email has been registered.</string>
    <string name="invalid_email_or_password">Invalid Email or Password</string>
    <string name="invalid_old_password">Invalid Password</string>
    <style name="failed_edit_profile">Edit Profile Failed! Please try again.</style>

    <string name="text_error">Error</string>
    <string name="text_ok">OK</string>
    <string name="text_welcome">Welcome</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_progress">Your Progress</string>
    <string name="today">Today</string>
    <string name="water_volume">Water Volume</string>
    <string name="total_drink">Total Drink</string>
    <string name="past">Past</string>
    <string name="waterVolDay">xxx</string>
    <string name="totDrinkDay">xxx</string>
    <string name="waterVolWeek">xxx</string>
    <string name="totDrinkWeek">xxx</string>
    <string name="history">Drink History</string>
    <string name="logout">LOGOUT</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="change_password">Change Password</string>
    <string name="prompt_age">Enter your age</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="new_password">New Password</string>
    <string name="prompt_new_password">Enter your new password</string>
    <string name="prompt_old_password">Enter old password for validation</string>

    <string name="number_weight">Spinner Example</string>
    <string name="old_password">Old Password</string>
    <string name="add_water_intake">Add Water Intake</string>
    <string name="enable_reminder">Enable Reminder</string>
    <string name="disable_reminder">Disable Reminder</string>
    <string name="water_intake_goal">Water Intake Goal</string>
    <string name="today_drink_history">Today Drink History</string>
    <string name="get_in_shape">Get In Shape</string>


</resources>