<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".app.landing.profile.editprofile.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_image"
                android:layout_width="match_parent"
                android:layout_marginVertical="30dp"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cl_image"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="8dp"
                android:elevation="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <!--Username-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:selectAllOnFocus="true"
                        tools:ignore="TouchTargetSizeCheck" />

                    <!--Full Name-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/fullname"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="12dp"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:hint="@string/prompt_fullname"
                        android:inputType="textPersonName"
                        android:selectAllOnFocus="true"
                        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

                    <!-- Email -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginBottom="30dp"
                        android:background="@color/gray"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="8dp"
                        android:text="email@test.com"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"
                        android:textSize="18sp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_marginVertical="4dp"
                        android:layout_marginHorizontal="15dp" />

                    <!-- Change Password -->
                    <TextView
                        android:id="@+id/tv_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/new_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/prompt_new_password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        tools:ignore="TouchTargetSizeCheck" />

                    <!-- Change Password -->
                    <TextView
                        android:id="@+id/tv_old_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/old_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/prompt_old_password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btn_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="85dp"
                        android:backgroundTint="@color/blue"
                        android:text="@string/confirm_edit"
                        android:textColor="@color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>