<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="btnAboveText"
            type="String" />

        <variable
            name="btnBelowText"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{btnAboveText}"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            tools:text="@string/login" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="11dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:text="@string/or"
                android:textColor="@color/black" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_below"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="8dp"
            android:text="@{btnBelowText}"
            android:background="@drawable/light_blue_rounded_border"
            android:textColor="@color/light_blue"
            tools:text="@string/register" />

    </LinearLayout>

</layout>