<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".app.login.LoginActivity">

        <TextView
            android:id="@+id/title_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            android:textSize="24sp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_welcome">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_margin="24dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />

                    <include
                        android:id="@+id/layout_btn_login_register"
                        app:btnAboveText="@{@string/login}"
                        app:btnBelowText="@{@string/register}"
                        layout="@layout/register_or_login_button" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0.3" />

    </RelativeLayout>
</layout>